fix text invisible of dhcp-host description

--- a/htdocs/luci-static/argon/cascade.css
+++ b/htdocs/luci-static/argon/cascade.css
@@ -955,6 +955,12 @@ h5 {
   padding: 0.5rem 0;
   color: #fff;
 }
+#cbi-dhcp-host > .cbi-section-descr {
+  font-size: small;
+  line-height: 1.42857143;
+  padding: 0 1rem 0 1.2rem;
+  color: #9D9D9D;
+}
 .cbi-map-descr + fieldset {
   margin-top: 1rem;
 }
